--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@ __pycache__/
 
 # 忽略不可参考的训练数据
 /runs/gait-conditioned-agility/2024*/
-/runs/gait-conditioned-agility/pretrain-go2/
 
 go2_gym_deploy/build/
 go2_gym_deploy/unitree_sdk2_bin/library/unitree_sdk2/build/
+go2_gym
+go2_gym_learn
